gitops/core/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-https
      namespace: envoy-gateway-system
  hostnames:
    - "oci-mon.juancarlosvaldes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: grafana
          port: 80
          weight: 1
